@@ -1,5 +1,6 @@
 requires 'perl' => '5.010001';
 requires 'Mojolicious' => '7.12';
 requires 'Scalar::Util';
+suggests 'Sereal' => '3.001';
 test_requires 'Test::More' => '0.88';
 test_requires 'Test::Needs';
